--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -387,6 +387,14 @@ header {
   margin-left: 20px;
 }
 
+.dropdown-item {
+  font-size: 14px;
+}
+
+.searching {
+  display: none;
+}
+
 /*--------------------------------------------------------------------
 Section
 ---------------------------------------------------------------------*/
