--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -371,6 +371,14 @@ header {
     }
 }
 
+.dropdown-item {
+    font-size: 14px;
+}
+
+.searching {
+    display: none;
+}
+
 /*--------------------------------------------------------------------
 Section
 ---------------------------------------------------------------------*/
